# grimx

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.sh
.github/workflows/: python-publish.yml
docs/: getting-started.md
grim/: build.py  cli.py  config.py  install.py  scaffold.py
grim/templates/c/: CMakeLists.txt
grim/templates/cpp/: CMakeLists.txt
grim/templates/cpp/src/: main.cpp
grim/templates/embedded_c/: CMakeLists.txt
grim/templates/embedded_c/cmake/: toolchain.cmake
grim/templates/embedded_c/src/: main.c
grim/templates/embedded_cpp/: CMakeLists.txt
grimx/: build.py  cli.py  cmake_patch.py  config.py  doctor.py  install.py  scaffold.py
grimx/templates/c/tests/: CMakeLists.txt
grimx/templates/cpp/src/: main.cpp
grimx/templates/cpp/tests/: CMakeLists.txt
grimx/templates/embedded_c/: CMakeLists.txt
grimx/templates/embedded_cpp/: CMakeLists.txt
grimx/templates/embedded_cpp/cmake/: toolchain_cmake
grimx/templates/embedded_cpp/src/: main.cpp
