[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grimx"
version = "0.5.3"
description = "GCC Runtime & Installation Manager, Cross-platform — minimal tooling for C and C++ projects"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "tomlkit>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
grimx = "grimx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["grimx*"]

[tool.setuptools.package-data]
grimx = ["templates/**/*"]